// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableHeaderCell > should render a table header 1`] = `
<div>
  <!---->
  <th
    aria-disabled="false"
    aria-label="name"
    class="custom-class"
    data-disabled="false"
    data-sortable="false"
    scope="col"
  >
    <div
      data-table-header-cell=""
    >
      name 
      <!---->
    </div>
  </th>
  
  
</div>
`;

exports[`TableHeaderCell > should render a table header 2`] = `
<div>
  <!---->
  <th
    aria-disabled="false"
    aria-label="name"
    class="another-class"
    data-disabled="false"
    data-sortable="false"
    scope="col"
  >
    <div
      data-table-header-cell=""
    >
      name 
      <!---->
    </div>
  </th>
  
  
</div>
`;
